<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.screen.detectiondetail.DetectionDetailFragment">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Blossom End Rot" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/header_iv"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/symptom_tv"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gejala"
            app:layout_constraintTop_toBottomOf="@id/header_iv" />

        <TextView
            android:id="@+id/symptom_detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/description"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/symptom_tv" />

        <TextView
            android:id="@+id/treatment_tv"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/perawatan"
            app:layout_constraintTop_toBottomOf="@id/symptom_detail_tv" />

        <TextView
            android:id="@+id/treatment_detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/description"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/treatment_tv" />

        <TextView
            android:id="@+id/prevention_tv"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pencegahan"
            app:layout_constraintTop_toBottomOf="@id/treatment_detail_tv" />

        <TextView
            android:id="@+id/prevention_detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/description"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/prevention_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
