<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.screen.diseasedetection.DiseaseDetectionFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/plant_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_border_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="?attr/colorOnBackground"
        app:strokeWidth="1dp" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_iv">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_take_photo"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/take_photo"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:cornerRadius="24dp"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_choose_photo"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/choose_photo"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:cornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_take_photo" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/analyze_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/analyze"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:cornerRadius="100dp"
        app:layout_constraintTop_toBottomOf="@id/ll_button" />

</androidx.constraintlayout.widget.ConstraintLayout>